 2014-10-12 19:33  asfernandes 
   M src/jrd/UserManagement.cpp
   M src/jrd/UserManagement.h
   M src/jrd/dpm.epp
Misc.

 2014-10-12 18:47  asfernandes 
   M src/isql/isql.epp
   M src/jrd/Database.cpp
   M src/jrd/trace/TraceDSQLHelpers.h
   M src/jrd/trace/TraceJrdHelpers.h
Misc.

 2014-10-12 18:24  dimitr 
   M src/jrd/build_no.h
   M src/misc/writeBuildNum.sh
Updated the version info.

 2014-10-12 02:25  asfernandes 
   M examples/interfaces/04.print_table.cpp
   M src/alice/alice.h
   M src/alice/exe.cpp
   M src/common/StatusHolder.h
   M src/common/isc_sync.cpp
   M src/common/unicode_util.cpp
   M src/common/utils.cpp
   M src/dsql/DdlNodes.epp
   M src/dsql/DdlNodes.h
   M src/dsql/ExprNodes.cpp
   M src/dsql/StmtNodes.cpp
   M src/dsql/dsql.cpp
   M src/dsql/metd.epp
   M src/jrd/dpm.epp
   M src/jrd/inf.cpp
   M src/jrd/jrd.cpp
   M src/jrd/ods.cpp
   M src/jrd/pag.cpp
   M src/jrd/pag_proto.h
   M src/jrd/validation.cpp
Misc.

 2014-10-12 02:24  asfernandes 
   M src/common/call_service.cpp
Correction.

 2014-10-11 19:17  dimitr 
   M doc/WhatsNew
Updated the docs.

 2014-10-11 09:02  dimitr 
   M src/remote/client/interface.cpp
   M src/remote/inet.cpp
   M src/remote/os/win32/wnet.cpp
   M src/remote/os/win32/xnet.cpp
   M src/remote/remote.cpp
   M src/remote/remote.h
   M src/remote/server/server.cpp
Improved the batching (prefetch) logic. This is the second part of CORE-2530.

 2014-10-10 16:00  asfernandes 
   M src/jrd/RecordSourceNodes.cpp
Fixed CORE-4574 - Incorrect result in subquery with aggregate.

 2014-10-10 12:05  alexpeshkoff 
   M src/yvalve/why.cpp
Fixed AV caused by one of my recent commits - thanks to Vlad

 2014-10-10 10:12  hvlad 
   M src/jrd/Attachment.h
   M src/jrd/cch.cpp
   M src/jrd/jrd.cpp
Fixed bug CORE-4576 :  Cache Writer thread could not start

 2014-10-10 10:11  hvlad 
   M src/jrd/Database.h
   M src/jrd/vio.cpp
Fixed bug CORE-4575 : AV in garbage collector thread at disconnect of last attachment
